<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_main"
    tools:context="com.Innospectra.NanoScan.ScanViewActivity">

    <LinearLayout
        android:id="@+id/ll_device_info"
        android:layout_marginStart="@dimen/dip32"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip48"
        android:gravity="center"
        android:minHeight="@dimen/dip40">

        <TextView
            android:id="@+id/tv_device_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_information"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_marginStart="@dimen/dip16"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_device_status"
        android:layout_marginStart="@dimen/dip32"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip48"
        android:gravity="center"
        android:minHeight="@dimen/dip40">

        <TextView
            android:id="@+id/tv_device_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_status"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_marginStart="@dimen/dip16"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_scan_config"
        android:gravity="center"
        android:layout_marginStart="@dimen/dip32"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip48">

        <TextView
            android:id="@+id/tv_scan_config"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scan_conf"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_marginStart="@dimen/dip16"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_lock_button"
        android:gravity="center"
        android:layout_marginStart="@dimen/dip32"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip48">

        <TextView
            android:id="@+id/tv_scan_lock_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lock_btn"
            android:textAppearance="?android:textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/btn_lock_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dip48"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:checked="true"/>

    </LinearLayout>
    <View
        android:id="@+id/view_lock_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_marginStart="@dimen/dip16"
        android:background="@color/gray" />
</LinearLayout>