<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.Innospectra.NanoScan.MainActivity"
    >

    <ImageView
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:src="@drawable/yh" />
    <EditText
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:id="@+id/username"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:paddingLeft="8dp"
        android:hint="@string/remember_name"
        />

    <EditText
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:inputType="textPassword"
        android:hint="@string/remember_password"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:background="#44A348"
        android:text="@string/text_login"
        android:textColor="#F6F0F0"
        android:textSize="20dp"/>

</LinearLayout>